@@ -1,32 +1,27 @@
 ---
-abstract: 'Generate a list of all primes less than or equal'
+abstract: 'Alternate Math::Prime::FastSieve using Inline::Module'
 author:
   - 'David Oswald <davido [@at] cpan [d.o.t] org>'
 build_requires:
-  English: 0
-  ExtUtils::MakeMaker: 6.63
-  Test::More: 0.98
+  ExtUtils::MakeMaker: '7.04'
+  Test::More: '1.001009'
 configure_requires:
-  ExtUtils::MakeMaker: 6.63
-  Inline::MakeMaker: 0.51
+  ExtUtils::MakeMaker: '7.04'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 7.04, CPAN::Meta::Converter version 2.142690'
 license: artistic
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-name: Math-Prime-FastSieve
+  version: '1.4'
+name: Alt-Math-Prime-FastSieve-Inline
 no_index:
   directory:
     - t
     - inc
 provides:
-  Math::Prime::FastSieve:
-    file: lib/Math/Prime/FastSieve.pm
-    version: 0.18
+  Alt::Math::Prime::FastSieve::Inline:
+    file: lib/Alt/Math/Prime/FastSieve/Inline.pm
+    version: '0.01'
 requires:
-  Inline: 0.51
-  Inline::C: 0.51
-  Inline::CPP: 0.42
-  perl: 5.006000
-version: 0.18
+  perl: '5.008001'
+version: '0.02'
